--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,8 @@ scikit-learn==1.2.2
 scipy==1.9.3
 seaborn==0.12.2
 statsmodels==0.13.5
-streamlit==1.21.0
+# streamlit==1.21.0
+streamlit==0.85.0
 tangled-up-in-unicode==0.2.0
 tenacity==8.2.2
 threadpoolctl==3.1.0
