--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,19 @@
-# streamlit==1.21.0
+numpy==1.18.5
+pandas==1.4.2
+matplotlib==3.3.1
+seaborn==0.11.0
+pandas-profiling==3.1.0
+plotly==4.12.0
+ppscore==1.2.0
+altair<5
 streamlit==0.85.0
-altair
-backports.zoneinfo
-blinker
-cachetools
-click
-contourpy
-cycler
-entrypoints
-feature-engine
-fonttools
-htmlmin
-ImageHash
-imbalanced-learn
-ipywidgets
-joblib
-jupyterlab-widgets
-kiwisolver
-matplotlib
-multimethod
-networkx
-numpy
-pandas
-pandas-profiling
-patsy
-phik
-Pillow
-plotly
-ppscore
-protobuf
-pyarrow
-pydantic
-pydeck
-Pympler
-pyparsing
-pytz
-pytz-deprecation-shim
-PyWavelets
-scikit-learn
-scipy
-seaborn
-tangled-up-in-unicode
-tenacity
-threadpoolctl
-toml
-toolz
-tqdm
-typeguard
-tzdata
-tzlocal
-validators
-visions
-watchdog
-widgetsnbextension
-xgboost
-ydata-profiling
-yellowbrick
+
+feature-engine==1.0.2
+imbalanced-learn==0.8.0
+scikit-learn==0.24.2
+xgboost==1.2.1
+yellowbrick==1.3
+Jinja2==3.1.1
+MarkupSafe==2.0.1
+protobuf==3.20
+ipywidgets==8.0.2
